[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expy"
version = "0.0.1"
description = "A minimal AI experimentation framework"
readme = "README.md"
authors = [
  { name = "Kerry Cerqueira", email = "kerrycerqueira@gmail.com" }
]
dependencies = [
	"pyserde>=0.23",
	"nbclient>=0.10.2",
	"typer>=0.9.0"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "D", "W", "UP", "DOC"]
ignore = ["D206", "W191"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
ignore-overlong-task-comments = true

[project.scripts]
expy = "expy.cli:expy"

